# dopekit

./: .checkov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  Makefile  Makefile.env  README.md  pyproject.toml
.circleci/: Dockerfile  config.yml  dynamic_config.yml
.github/: CODEOWNERS  pull_request_template.md
src/example_lambda/: example_lambda.py  pyproject.toml  test_example_lambda.py
terraform/: .terraform.lock.hcl  config.tf  main.tf  outputs.tf  variables.tf
terraform/lmb/: main.tf  output.tf  variables.tf
terraform/tfvars/: dev-backend.tfvars  dev.tfvars  prod-backend.tfvars  prod.tfvars
test/: test_fixme.py
