[tool.poetry]
name = "local-dev-py"
version = "0.1.0"
description=""
authors=[]

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^24.1.0"
boto3 = "^1.34.16"

[tool.poetry.group.unittests.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
boto3-stubs = {extras = ["essential"], version = "^1.34.1"}

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # Complexity
    "C"
]
line-length = 120
fix = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
